fix swiper size on small screen

--- a/frontend/src/styles/swipe.css
+++ b/frontend/src/styles/swipe.css
@@ -8,12 +8,14 @@
     margin-top: 15%;
     color: white;
     font-weight: 700;
+    padding: 0 10px;
 }
 
 img {
     width: 100%;
     object-fit: cover;
     max-height: -webkit-fill-available;
+    height: 100%;
 }
 
 .swiper {
@@ -47,3 +49,8 @@ img {
     color: white !important;
 }
 
+@media (max-width: 650px) {
+    .slide-text {
+        margin-top: 30%;
+    }
+}
